--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Kanban Board</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" type="text/css" href="./static/stylesheet.css">
@@ -16,10 +17,6 @@
                 <li class="task">Activity A2</li>
                 <li class="task">Activity A3</li>
             </ul>
-            <div class="link-div">
-                <input type="text" id="new_text" value=""/>
-                <input type="button" name="btnAddNew" value="Add" class="add-button"/>
-            </div>
         </div>
         <div class="container" style="background-color:orange;">
             <h2>In Progress</h2>
@@ -39,6 +36,18 @@
             <h2>Done</h2>
             <ul class="sortable connectedSortable" >
             </ul>
+        </div>
+        <div class='container'>
+            <form>
+                <input type="text" id="new_text" value=""/>
+                <button class="add-button">Add New</button>
+            </form>
+            <button class="get-button">Get All</button>
+            <form>
+                <input type="text" id="update_text" value=""/>
+                <button class="update-button">Update</button>
+            </form>
+            <p id=result></p>
         </div>
     </div>
 </body>
