added text backup

--- a/static/index.html
+++ b/static/index.html
@@ -17,12 +17,12 @@
         </div>
         <div class="container" style="background-color:orange;">
             <h2>In Progress</h2>
-            <ul class="sortable connectedSortable" >
+            <ul class="sortable connectedSortable" id="inprogress" >
             </ul>
         </div>
         <div class="container" style="background-color:green;">
             <h2>Complete</h2>
-            <ul class="sortable connectedSortable" >
+            <ul class="sortable connectedSortable" id="complete">
             </ul>
         </div>
         <div class='container'>
