added user date and css

--- a/static/index.html
+++ b/static/index.html
@@ -17,10 +17,18 @@
             </div>
             <div class="container-body" style="background-color:#ADADAD;">
                 <ul class="sortable connectedSortable" id="backlog">
+                    <li id="creation" class="task">
+                        <div>
+                            <p data-editable class="taskinput">New Task</p>
+                            <button class="add-button">Done</button>
+                            <p id="time">creating...</p>
+                            <p id="user">Done</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="container-foot" style="background-color:#ADADAD;">
-                <button class="add-button">+ Add Card</button>
+                <button class="show-button">+ Add Card</button>
             </div>
         </div>
         <div class="container">
