--- a/static/index.html
+++ b/static/index.html
@@ -18,12 +18,9 @@
             <div class="container-body" style="background-color:#ADADAD;">
                 <ul class="sortable connectedSortable" id="backlog">
                     <li id="creation" class="task">
-                        <div>
-                            <p data-editable class="taskinput">New Task</p>
-                            <button class="add-button">Done</button>
-                            <p id="time">creating...</p>
-                            <p id="user">Done</p>
-                        </div>
+                        <input data-editable class="taskinput" value="New Task">
+                        <p id="time">creating...</p>
+                        <button class="add-button">Done</button>
                     </li>
                 </ul>
             </div>
