--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Kanban Board</title>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
