--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Kanban Board</title>
+    <!-- import resources -->
+    <link rel="shortcut icon" href="#" />
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -12,40 +14,43 @@
 <body>
     <header><p>Kanban Challenge</p></header>
     <div>
-        <div class="container">
+        <div class="container"> <!-- backlog container -->
             <div class="container-head" style="background-color:#ADADAD;">
                 <h2>Backlog</h2>
             </div>
             <div class="container-body" style="background-color:#ADADAD;">
                 <ul class="sortable connectedSortable" id="backlog">
-                    <li id="creation" class="task">
+                    <li id="creation" class="task"> <!-- static creator element -->
                         <input data-editable class="taskinput" value="New Task">
                         <p id="time">creating...</p>
                         <button class="add-button">Done</button>
                     </li>
+                    <!-- where task elements are added -->
                 </ul>
             </div>
             <div class="container-foot" style="background-color:#ADADAD;">
-                <button class="show-button">+ Add Card</button>
+                <button class="show-button">+ Add Card</button> <!-- add button  -->
             </div>
         </div>
-        <div class="container">
+        <div class="container"> <!-- in progress container -->
             <div class="container-head" style="background-color:#0066FF;">
                 <h2>In Progress</h2>
             </div>
             <div class="container-body" style="background-color:#0066FF;">
                 <ul class="sortable connectedSortable" id="inprogress" >
+                    <!-- where task elements are added -->
                 </ul>
             </div>
             <div class="container-foot" style="background-color:#0066FF;">
             </div>
         </div>
-        <div class="container">
+        <div class="container"> <!-- complete container -->
             <div class="container-head" style="background-color:green;">
                 <h2>Complete</h2>
             </div>
             <div class="container-body" style="background-color:green;">
                 <ul class="sortable connectedSortable" id="complete">
+                    <!-- where task elements are added -->
                 </ul>
             </div>
             <div class="container-foot" style="background-color:green;">
